# anti-clustering

./: .pylintrc  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  depandabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yaml  build-spark-container.yaml  build.yaml  codestyle.yaml  deploy-pypi.yaml  dev-release.yaml  prepare_release.yaml  pylint.yaml  release.yaml  test.yaml  validate.yaml
anti_clustering/: __init__.py  _base.py  _cluster_swap_heuristic.py  _union_find.py  _version.py  exact_cluster_editing.py  exchange_heuristic.py  ilp.py  naive_random_heuristic.py  simulated_annealing_heuristic.py  tabu_search_heuristic.py  union_find.py
examples/: evaluation.py
tests/: test_anti_clustering.py  test_ilp_anti_clustering.py  test_union_find.py
