[tool.poetry]
name = "anti-clustering"
version = "0.0.0"
description = "Generic Anti-Clustering"
authors = ["Matthias Als <mata@ecco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ortools = "==9.3.10497"
pandas = "~1.3.2"
numpy = "~1.22.3"
scipy = "~1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "~6.2"
pylint = "~2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
