[tool.poetry]
name = "anti-clustering"
version = "0.0.0"
description = "Generic Anti-Clustering"
authors = ["Matthias Als <mata@ecco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ortools = "==9.3.10497"
pandas = "~1.4.4"
numpy = "~1.23.1"
scipy = "~1.9.0"
scikit-learn = "~1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "~6.2"
pylint = "~2.14"
pytest-cov = "3.0.0"
black = "~22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
