[tool.poetry]
name = "anti-clustering"
version = "0.0.0"
description = "Generic Anti-Clustering"
authors = ["Matthias Als <mata@ecco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
ortools = "==9.6.2534"
pandas = "^2.0.0"
numpy = "^1.23.1"
scipy = "^1.9.0"
scikit-learn = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pylint = "^2.14"
pytest-cov = "~3.0"
black = "^23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
